# terminal-context

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  release.yml
package/: AppxManifest.xml
src/: ContextCommand.cpp  ContextCommand.h  ContextHandler.def  Guid.h  TerminalLauncher.cpp  TerminalLauncher.h  dllmain.cpp  stub.cpp
tests/: run-tests.ps1
tools/: Install-Release.ps1  install.ps1  pack.ps1  uninstall.ps1
